# entropy_nrf53

./: README.md
cpuapp/: CMakeLists.txt  Kconfig  prj.conf
cpuapp/src/: entropy_ser.c  main.c
cpunet/: CMakeLists.txt  Kconfig  prj.conf
cpunet/src/: entropy_ser.c  main.c
nrf_rpc_1/: CMakeLists.txt  Kconfig  nrf_rpc.c  nrf_rpc_cbor.c
nrf_rpc_2/: CMakeLists.txt  Kconfig  nrf_rpc_os.c  nrf_rpc_rpmsg.c
